fix line-height and header alignment

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,7 @@ $eiti-logo-width: 195px;
 $weight-light: 200; // use
 $weight-book: 400; // use
 $weight-bold: 700; // use
+$line-height-caps: 1.2;
 
 $sans-serif: Lato, 'Helvetica Neue', Helvetica, arial, sans-serif;
 $base-font-family: $sans-serif;
