--- a/_sass/elements/_tables.scss
+++ b/_sass/elements/_tables.scss
@@ -54,11 +54,19 @@ td {
 
   thead {
     background-color: transparent;
-    line-height: 1.2;
+    line-height: $line-height-caps;
 
     tr {
       border-bottom: 2px solid $mid-gray;
     }
+  }
+}
+
+.disbursements-table {
+  td,
+  th {
+    padding-top: $base-padding-small;
+    padding-bottom: $base-padding-small;
   }
 }
 
